name:                blockchain-api-short-demo-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blockchain-api-short-demo-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Logger
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable blockchain-api-short-demo-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blockchain-api-short-demo-haskell
                     , wreq
                     , scotty
                     , aeson
                     , text
                     , either
                     , mtl
                     , lens
                     , bytestring
  default-language:    Haskell2010

test-suite blockchain-api-short-demo-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blockchain-api-short-demo-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/blockchain-api-short-demo-haskell
